fixed off-screen overflow problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -236,6 +236,7 @@ label[for="card-search"]::after {
 
 .deck div {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     min-height: 300px;
     border: 2px solid #000;
